--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@telegram-apps/sdk-react": "^3.3.9",
     "@twa-dev/sdk": "^8.0.2",
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.26",
